create cli arg parser darim readme, roadmap